--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
         <a href="#" class="cta-button">ORDER HERE NOW</a>
 
         <p><br/></p>
-        <p style="text-align:justify;font-size: 1rem;">"Download <i>10 Free Chapters of <b>101 NYC Soups</b></i> and immerse yourself in the heartwarming stories and magical moments that define New York City. Experience the soul of the city through heartfelt anecdotes and vibrant tales that will inspire and uplift you. <b><a href="freechapters.pdf">Click Here</a></b> to claim your exclusive preview and take the first step on this unforgettable journey!"</p>
+        <p style="text-align:justify;font-size: 1rem;">"Download <i>10 Free Chapters of <b>101 NYC Soups</b></i> and immerse yourself in the heartwarming stories and magical moments that define New York City. Experience the soul of the city through heartfelt anecdotes and vibrant tales that will inspire and uplift you. <b><a href="FreeChaptersNYCSoups.pdf" target="blank">Click Here</a></b> to claim your exclusive preview and take the first step on this unforgettable journey!"</p>
 
 </div>
 </body>
