--- a/index.html
+++ b/index.html
@@ -57,12 +57,12 @@
             color: #222;
         }
         .cta-button {
-            background-color: #A7C7E7; /* Biru muda sejuk di mata */
-            color: #0D1B2A; /* Biru tua */
+            background-color: #ef233c; /* Biru muda sejuk di mata */
+            color: #EEE; /* Biru tua */
             padding: 15px 35px;
             font-size: 1.4rem;
             border: none;
-            border-radius: 50px;
+            border-radius: 5px;
             text-decoration: none;
             cursor: pointer;
             box-shadow: 0 4px 12px rgba(167, 199, 231, 0.3);
