--- a/index.html
+++ b/index.html
@@ -112,6 +112,9 @@
         <h1><i>"Every moment is a symphony of emotions—filled with heartwarming inspiration and unforgettable laughter."</i></h1>
         <hr/>
         <p style="text-align: center;"><i>by: Richard Daris</i></p>
+        
+        <a href="#" class="cta-button">Click Here To Grab "101 NYC Soups" Now</a>
+
         <p><br/></p>
         <h2 style="color:#000;">For Dreamers, Adventurers, and Story Collectors</h2>
         <img src="nycsiluet.png" style="max-width:100%;margin-bottom:-30px;align: center;">
