--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             transition: all 0.3s ease;
         }
         .cta-button:hover {
-            background-color: #7F9EA9;
+            background-color: #fb8500;
             box-shadow: 0 6px 15px rgba(127, 158, 169, 0.5);
         }
         ul.b {
