--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
             padding: 15px 35px;
             font-size: 1.7rem;
             border: none;
+            font-weight: bold;
             border-radius: 5px;
             text-decoration: none;
             cursor: pointer;
