--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
         
         <h1><i>"Every moment is a symphony of emotions—filled with heartwarming inspiration and unforgettable laughter."</i></h1>
         <hr/>
-        <p style="text-align: center;"><i>by: Richard Daris</i></p>
+        <p style="text-align: center;margin-bottom: 20px;"><i>by: Richard Daris</i></p>
         
         <a href="#" class="cta-button">Click Here To Grab "101 NYC Soups" Now</a>
 
