--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
             <a href="https://nycsoups.github.io">HOME</a> | 
             <a href="https://nycsoups.github.io/FreeChaptersNYCSoups.pdf" target="blank">FREE CHAPTERS</a> | 
             <a href="https://x.com/NYCSoups" target="blank">TWITTER</a> | 
-            <a href="https://medium.com/@NYCSoups" target="blank">MEDIUM</a>
+            <a href="https://medium.com/@startmmoup/101-new-york-city-soups-8a0cd1bfdb35" target="blank">MEDIUM</a>
         </p>
 </div>
 </body>
