--- a/soups.html
+++ b/soups.html
@@ -168,7 +168,7 @@
         <p style="text-align: left;"><i>Click below for your copy of <b>“101 NYC Soups”</b> today and experience the laughter, the tears, and the unexpected magic of life.</i></p>
         <p style="text-align: left;">New York is the stage, and you are part of its ongoing story.</p>
 
-        <p style="text-align: left;font-size: 2.4rem;font-weight: bold;">New York is calling. Will you answer?</p>
+        <p style="font-size: 2.4rem;font-weight: bold;">New York is calling. Will you answer?</p>
         <p></p>
         <a href="#" class="cta-button">ORDER HERE NOW</a>
 
