--- a/index.html
+++ b/index.html
@@ -114,7 +114,8 @@
         <p style="text-align:center;margin-bottom:40px;"><i>by: Richard Daris</i></p>
         
         <a href="#" class="cta-button">Click Here To Grab "101 NYC Soups" Now</a>
-        <p style="text-align:center;margin-top:—30px;margin-bottom:70px;">Don't let this moment slip away. Reserve your seat now.</p>
+        <p style="text-align:center;margin-top:—30px;margin-bottom:—10px;">Don't let this moment slip away. Reserve now.</p>
+        <p style="text-align:center;margin-top:—30px;margin-bottom:70px;font-size:1.2rem;"><i>(Download Free Chapter Below)</i></p>
         
         <h2 style="color:#000;">For Dreamers, Adventurers, and Story Collectors</h2>
         <p>Let me take you on a journey—not just through the streets of a city but deep into its magical essence. They say New York City isn’t just a place; it’s an experience. It’s the unique thrill of hailing a cab during rush hour, the delightful surprise of hearing a street musician who seems to sing just for you, and the comfort of a warm pretzel on a cold day.</p>
