--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
         <h1><i>"Every moment is a symphony of emotions—filled with heartwarming inspiration and unforgettable laughter."</i></h1>
         <p style="text-align:center;margin-bottom:40px;"><i>by: Richard Daris</i></p>
         
-        <a href="#" class="cta-button">Click Here To Grab "101 NYC Soups" Now</a>
+        <a href="#dld" class="cta-button">Click Here To Grab "101 NYC Soups" Now</a>
         <p style="text-align:center;margin-top:—40px;margin-bottom:—40px;">Don't let this moment slip away. Reserve now.</p>
         <p style="text-align:center;margin-top:—40px;margin-bottom:70px;font-size:1.1rem;"><i>(..or Download Free Chapter Below to take the first step on this unforgettable journey!)</i></p>
         
@@ -165,7 +165,7 @@
         <p style="text-align: left;">The curtains are drawing back. The city’s greatest performance is waiting for you.</p>
         <p style="text-align: left;">Let New York remind you that life, in all its beautiful messiness, is always worth celebrating.</p>
         <p style="text-align: left;"><i>Click below for your copy of <b>“101 NYC Soups”</b> today and experience the laughter, the tears, and the unexpected magic of life.</i></p>
-        <p style="text-align: left;">New York is the stage, and you are part of its ongoing story.</p>
+        <p id="dld" style="text-align: left;">New York is the stage, and you are part of its ongoing story.</p>
 
         <p style="font-size: 2.4rem;font-weight: bold;">New York is calling. Will you answer?</p>
         <p></p>
