--- a/index.html
+++ b/index.html
@@ -165,9 +165,9 @@
         <p style="text-align: left;">The curtains are drawing back. The city’s greatest performance is waiting for you.</p>
         <p style="text-align: left;">Let New York remind you that life, in all its beautiful messiness, is always worth celebrating.</p>
         <p style="text-align: left;"><i>Click below for your copy of <b>“101 NYC Soups”</b> today and experience the laughter, the tears, and the unexpected magic of life.</i></p>
-        <p id="dld" style="text-align: left;">New York is the stage, and you are part of its ongoing story.</p>
+        <p style="text-align: left;">New York is the stage, and you are part of its ongoing story.</p>
 
-        <p style="font-size: 2.4rem;font-weight: bold;">New York is calling. Will you answer?</p>
+        <p id="dld" style="font-size: 2.4rem;font-weight: bold;">New York is calling. Will you answer?</p>
         <p></p>
         <img src="bookcover.png" style="max-width:400px;align:center;margin-top:-40px;">
         <p></p>
